# GDPR

./: .env  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: docs.yml
database/: docker-compose.yaml  init.sql  mysql-snapshot.yaml  pg-snapshot.yaml
docs/: README.md  app.config.ts  nuxt.config.ts  pnpm-lock.yaml  tokens.config.ts
docs/.github/workflows/: docs.yml
docs/components/global/: Logo.vue
docs/content/: 0.index.md  1.build.md
docs/content/2.use/: 0.index.md  1.update.md  2.env-vars.md  _dir.yml
src/: cli.rs  config.rs  connection.rs  database.rs  dedupe.rs  directus.rs  dump.rs  lib.rs  main.rs  manifest.rs  permission.rs  reversed_permissions.rs  test.rs  test.sql  utils.rs  wildcard.rs
src/entities/: directus_files.rs  directus_permissions.rs  directus_presets.rs  mod.rs  prelude.rs
src/graph/: mod.rs  test.rs
