[package]
name = "gdpr"
version = "0.2.0"
edition = "2021"
publish = false
description = "GDPR - Granular Directus Permissions Resolver"
authors = ["ctholho <info@akronym.org>"]
license = "GPL-3.0+"
keywords = ["cli", "directus", "permissions", "crud", "sql"]
categories = ["command-line-utilities", "development-tools", "database", "web-programming"]
readme = "README.md"
repository = ""
documentation = ""

[package.metadata]
manifest_version = "0.5.0/pre-alpha"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
anyhow = "1.0"
dotenvy = "0.15.0"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.21"
serde_with = "3.0.0"
tokio = { version = "1.20.0", features = ["macros"]}
async-std = { version = "1.9", features = [ "attributes", "tokio1" ] }
sea-orm = { version = "0.11.3", features = [ "sqlx-all", "runtime-async-std-native-tls" ] }
indexmap = "1.9.3"
cargo_metadata = "0.15.4"
regex = "1.8.1"
petgraph = "0.6.3"
base64 = "0.21.0"
petgraph-graphml = "3.0.0"
thiserror = "1.0.40"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
